// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldCheckbox 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className="c4"
    >
      <input
        className="c5 "
        id="thumbs-up"
        name="thumbsUp"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`A FieldCheckbox with checked value 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className="c4"
    >
      <input
        checked={true}
        className="c5 "
        id="thumbs-up"
        name="thumbsUp"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`A required FieldCheckbox 1`] = `
.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  color: #990F14;
}

.c1 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
    <span
      aria-hidden="true"
      className="c4"
    >
       
      *
    </span>
  </label>
  <div
    className="c0"
  >
    <div
      className="c5"
    >
      <input
        className="c6 "
        id="thumbs-up"
        name="thumbsUp"
        required={true}
        type="checkbox"
      />
    </div>
  </div>
</div>
`;
